style: fix background imagem alignment in CSS

--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,4 +1,4 @@
 nav {
   background-color: #131e23;
-  height: 130px;
+  height: 100px;
 }
