--- a/src/styles.css
+++ b/src/styles.css
@@ -19,5 +19,5 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   font-family: "JetBrains Mono", monospace;
-  height: 100vh;
+  height: 100%;
 }
